@@ -1,3 +1,4 @@
+- prefer precompiled kmod packages corresponding to installed kernels
 - don't resolve suggested virtual packages if already installed (#34376)
 
 Version 2.06 - 28 September 2007, by Pascal "Pixel" Rigaux
